--- a/app/css/home.css
+++ b/app/css/home.css
@@ -51,7 +51,6 @@ h3 {
 
 .map-wrapper {
   padding: 0;
-  /*background-color: #5DD9C1;*/
   height: 100%;
   z-index: 99;
 }
@@ -65,7 +64,7 @@ h3 {
 }
 
 .noise-descrip {
-  border: 2px black solid;
+  border: 2px gray solid;
   z-index: 100;
   height: 120px;
   width: 300px;
