--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,4 +1,37 @@
 <div ng-controller="contactController">
-  <h2>Contact</h2>
-  <p>{{ hello }}</p>
+
+  <div class="contact">
+
+    <div class="row">
+
+      <div class="col-md-2">
+      </div>
+
+      <div class="col-md-4">
+        <h3>Kristina Hjertberg</h3>
+        <p>khjrtbrg at gmail dot com</p>
+        <p><a href="http://www.twitter.com/khjrtbrg" target="_blank">Twitter</a></p>
+        <p><a href="http://www.github.com/khjrtbrg" target="_blank">Github</a></p>
+      </div>
+
+      <div class="col-md-4">
+        <h3>Kat Patke</h3>
+        <p>kmmpatke at gmail dot com</p>
+        <p><a href="http://www.twitter.com/kmmpatke" target="_blank">Twitter</a></p>
+        <p><a href="http://www.github.com/katke" target="_blank">Github</a></p>
+      </div>
+
+      <div class="col-md-12">
+
+        <h4>Incidentally...</h4>
+        <p>
+          Kat and Kristina will be looking for dev jobs circa late August 2015, when they finish their Ada internships at Nordstrom and Substantial, respectively. Just, you know, FYI.
+        </p>
+
+      </div>
+
+    </div>
+
+  </div>
+
 </div>
