--- a/app/views/map.html
+++ b/app/views/map.html
@@ -11,7 +11,7 @@
       <div class="location-search">
         <form>
           <div class="form-group">
-            <label for="locationSearch"><h3>Get Location Score</h3></label>
+            <label for="locationSearch"><h3>Get Location Rating</h3></label>
             <input class="form-control" type="text" id="locationSearch" ng-model="locationSearch">
             <div class="error-msg" ng-hide="!address_error">{{ address_error }}</div>
           </div>
