--- a/app/css/map.css
+++ b/app/css/map.css
@@ -37,6 +37,18 @@ h1#firstHeading {
   margin-right: 10px;
 }
 
-.bad-score { color: red; }
-.med-score { color: orange; }
-.good-score { color: green; }
+.scoreIcon {
+  width: 4em;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.scoreIcon h2 {
+  line-height: 1.5em;
+  color: white;
+  margin-top: 0;
+}
+
+.bad-score { background-color: red; }
+.med-score { background-color: orange; }
+.good-score { background-color: green; }
