--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -9,7 +9,7 @@
 
       <div class="col-md-4">
         <h3>Kristina Hjertberg</h3>
-        <p>khjrtbrg at gmail dot com</p>
+        <p>hjert.k at gmail dot com</p>
         <p><a href="http://www.twitter.com/khjrtbrg" target="_blank">Twitter</a></p>
         <p><a href="http://www.github.com/khjrtbrg" target="_blank">Github</a></p>
       </div>
