--- a/app/css/home.css
+++ b/app/css/home.css
@@ -63,6 +63,61 @@ h3 {
   z-index: 99;
 }
 
+.noises, .noises svg {
+  position: absolute;
+}
+
+.noises svg {
+  /*width: 20px;*/
+  /*height: 20px;*/
+  width: 400px;
+  height: 400px;
+  /*background-color: cyan;*/
+}
+
+.noises circle {
+  fill: rgba(225, 19, 19, 0.2);
+  cursor: pointer;
+}
+
+.hide_noise_type {
+  display: none;
+}
+
+.hide {
+  display: none;
+}
+
+h1#firstHeading {
+  color: black;
+  font-size: 35px;
+  margin: 5px 0 0 0;
+  padding: 10px 0;
+}
+
+.score-icon {
+  position: relative;
+  background-color: black;
+  border-radius: 10%;
+  margin-right: 10px;
+}
+
+.scoreIcon {
+  width: 4em;
+  border-radius: 50%;
+  margin: 0 auto;
+}
+
+.scoreIcon h2 {
+  line-height: 1.5em;
+  color: white;
+  margin-top: 0;
+}
+
+.bad-score { background-color: red; }
+.med-score { background-color: orange; }
+.good-score { background-color: green; }
+
 .noise-descrip {
   border: 2px gray solid;
   z-index: 100;
@@ -77,7 +132,7 @@ h3 {
 }
 
 .noise-descrip-wrapper {
-  padding: 15px 0;
+  padding: 14px 0;
 }
 
 .noise-descrip h4 {
