making 'toggle heatmap' button inaccessible when all noises are turned off

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -40,7 +40,7 @@
               </button>
             </div>
           </div>
-          <button type="button" class="btn btn-default btn-block" ng-click="toggleHeatmap()">
+          <button type="button" class="btn btn-default btn-block" ng-click="toggleHeatmap()" ng-disabled="hideAllButton">
             Toggle Heatmap
           </button>
         </div>
