--- a/app/views/map.html
+++ b/app/views/map.html
@@ -8,6 +8,7 @@
           <p ng-model="currentNoiseInfo">{{ currentNoiseInfo }}</p>
         </div>
       </div>
+      <div class="mobile-filters text-center"><button ng-click="toggleMobile()"><h5>View Filters</h5></button></div>
     </div>
     <div class="map-filters col-md-3 col-sm-12 col-xs-12">
       <div class="location-search">
