adding pin icon

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -23,7 +23,7 @@
             <strong>OR</strong>
             <button class="btn btn-default" ng-click="currentLocation()">Use Current Location</button>
           </div>
-          <div><small>Right click on the map to drop a pin!</small></div>
+          <div><span class="glyphicon glyphicon-pushpin dropped-pin"></span><small>Right click on the map to drop a pin!</small></div>
         </form>
       </div>
       <div class="map-options">
