added social media icons, pics of kat and kristina

--- a/app/css/home.css
+++ b/app/css/home.css
@@ -134,7 +134,6 @@ h1#firstHeading {
 .noise-descrip h4 {
   padding: 0;
   margin: 0;
-  /*border: 1px black solid;*/
 }
 
 .noise-descrip-wrapper {
@@ -282,6 +281,23 @@ input[type=checkbox]:not(:checked) ~ div span {
 }
 
 /* About/Contact Page */
+.img-circle {
+  width: 80px;
+  margin-left: 40%;
+  margin-top: 40px;
+}
+
+.contact-link {
+  background-color: #383961;
+  height: 64px;
+  border-radius: 50%;
+}
+
+.contact-link-container {
+  margin-left: 25%;
+  margin-top: 20px;
+}
+
 .about, .contact, .api {
   width: 70%;
   margin: auto;
@@ -332,6 +348,10 @@ input[type=checkbox]:not(:checked) ~ div span {
     background-color: #5DD9C1;
     z-index: 100;
     width: 100%;
+  }
+
+  .contact-link {
+    height: 48px;
   }
 
   .mobile-filters button {
