--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -4,21 +4,24 @@
 
     <div class="row">
 
-      <div class="col-md-2">
-      </div>
-
-      <div class="col-md-4">
+      <div class="col-md-6">
+        <img class="img-circle" src="app/img/kristina.jpg"/>
         <h3>Kristina Hjertberg</h3>
-        <p>hjert.k at gmail dot com</p>
-        <p><a href="http://www.twitter.com/khjrtbrg" target="_blank">Twitter</a></p>
-        <p><a href="http://www.github.com/khjrtbrg" target="_blank">Github</a></p>
+        <div class="contact-link-container">
+          <a href="http://www.twitter.com/khjrtbrg" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
+          <a href="http://www.github.com/khjrtbrg" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
+          <a href="www.linkedin.com/in/khjrtbrg" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        </div>
       </div>
 
-      <div class="col-md-4">
+      <div class="col-md-6">
+        <img class="img-circle" src="app/img/kat.jpg"/>
         <h3>Kat Patke</h3>
-        <p>kmmpatke at gmail dot com</p>
-        <p><a href="http://www.twitter.com/kmmpatke" target="_blank">Twitter</a></p>
-        <p><a href="http://www.github.com/katke" target="_blank">Github</a></p>
+        <div class="contact-link-container">
+          <a href="http://www.twitter.com/kmmpatke" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
+          <a href="http://www.github.com/katke" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
+          <a href="www.linkedin.com/in/kpatke/en" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        </div>
       </div>
 
       <div class="col-md-12">
