--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -8,7 +8,7 @@
       <div class="contact-link-container">
         <a href="http://www.twitter.com/khjrtbrg" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
         <a href="http://www.github.com/khjrtbrg" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
-        <a href="www.linkedin.com/in/khjrtbrg" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        <a href="http://www.linkedin.com/in/khjrtbrg" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
       </div>
     </div>
 
@@ -18,7 +18,7 @@
       <div class="contact-link-container">
         <a href="http://www.twitter.com/kmmpatke" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
         <a href="http://www.github.com/katke" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
-        <a href="www.linkedin.com/in/kpatke/en" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        <a href="http://www.linkedin.com/in/kpatke/en" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
       </div>
     </div>
 
