added ER tooltip to hospitals layer

--- a/app/views/map.html
+++ b/app/views/map.html
@@ -94,7 +94,9 @@
           <div class="switch">
             <span class="glyphicon glyphicon-plus-sign clicked"></span>
           </div>
-          <p>Hospitals</p>
+          <p>Hospitals
+            <img src="app/img/info_symbol.png" class="info" tooltip-placement="right" tooltip="Specifically, emergency rooms"/>
+          </p>
         </label>
         <label>
           <input type="checkbox" checked="true" ng-click="toggleNoises('bar');changeColor($event)"></input>
