adding King County GIS to acknowledgements

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -65,6 +65,7 @@
       <li><a href="http://www.adadevelopersacademy.org" target="_blank">Ada Developers Academy</a> — For teaching Kat/Kristina the skills necessary to make SuS a reality</li>
       <li><a href="https://data.seattle.gov/" target="_blank">Seattle Open Data</a></li>
       <li><a href="https://data.kingcounty.gov/" target="_blank">King County Open Data</a></li>
+      <li><a href="http://www.kingcounty.gov/operations/GIS/GISData.aspx" target="_blank">King County GIS Data</a></li>
       <li><a href="http://www.wsdot.wa.gov/mapsdata.htm" target="_blank">Washington Department of Transportation Open Data</a></li>
       <li><a href="http://liq.wa.gov/taxreporting/licensee-list" target="_blank">Washington State Liquor Control Board Open Data</a></li>
       <li><a href="http://glyphicons.com/" target="_blank">Glyphicons</a>, which were made available for free through Bootstrap</li>
