--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,16 +1,13 @@
-<div class="about">
-  <div class="row">
-    <div class="col-md-11">
-
+<div class="row content-page">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
     <h2>About 'Shut Up, Seattle'</h2>
     <p>
       This site is the product of a month-long <a href="http://www.adadevelopersacademy.org" target="_blank">Ada Developers Academy</a> capstone project by <a href="http://www.twitter.com/kmmpatke" target="_blank">Kat Patke</a> and <a href="http://www.twitter.com/khjrtbrg" target="_blank">Kristina Hjertberg</a>.
     </p>
-
     <p>
       Seattle can be a pretty noisy place, especially given how quickly it's developing and growing. That can be tricky to navigate if you'd rather not live across the street from an active demolition site (or maybe that's your thing, we don't know your life). Our site will hopefully offer up a clearer picture about what you're getting yourself into before you sign a lease or plan a would-be peaceful stroll through South Lake Union, particularly if you're new to the city.
     </p>
-
     <p>
       The noise datapoints available to us (as seen on the main page) are:
     </p>
@@ -30,33 +27,21 @@
       <li>Airports/Heliports</li>
       <li>Freeways (including on/off ramps in many cases)</li>
     </ul>
-
     <h3>The Noise Rating</h3>
     <p>
       Searching a Seattle address or dropping a pin on the map will tell you the estimated noise score for that location. This score is determined by:
     </p>
     <ul>
-
-      <li>
-        Finding any noise data points that are within range (approximately one block on all sides)
-      </li>
-      <li>
-        Calculating approximately how loud (in dB) those noises would be at your location using a formula called inverse square law
-        </li>
-      <li>
-        Adding them together and assigning a score, A-F, based on where the total dB falls in our algorithm's range
-      </li>
-
+      <li>Finding any noise data points that are within range (approximately one block on all sides)</li>
+      <li>Calculating approximately how loud (in dB) those noises would be at your location using a formula called inverse square law</li>
+      <li>Adding them together and assigning a score, A-F, based on where the total dB falls in our algorithm's range</li>
     </ul>
-
     <p>
       The location rating also displays a list of which in-range noises were detected.
     </p>
-
     <p>
       Unfortunately, our site cannot detect the presence of upstairs neighbors who play the saxophone at 4 in the morning. You're on your own there.
     </p>
-
     <h3>Acknowledgements</h3>
     <p>
       This site would not have been possible without:
@@ -70,6 +55,6 @@
       <li><a href="http://liq.wa.gov/taxreporting/licensee-list" target="_blank">Washington State Liquor Control Board Open Data</a></li>
       <li><a href="http://glyphicons.com/" target="_blank">Glyphicons</a>, which were made available for free through Bootstrap</li>
     </ul>
-
   </div>
+  <div class="col-md-2"></div>
 </div>
