--- a/app/views/api.html
+++ b/app/views/api.html
@@ -1,8 +1,6 @@
-<div class="api">
-
-  <div class="row">
-
-    <div class="col-md-11">
+<div class="row content-page">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
     <h2>About the API</h2>
 
     <p>Shut Up, Seattle (SuS) empowers citizens to make informed decisions about where they work, play, and live. Similarly, the SuS API seeks to make data related to noise pollution as public as possible.</p>
@@ -93,6 +91,6 @@
     </pre>
 
     <p><strong>Note:</strong> The API will return an error message if your query is outside of Seattle city limits. We roughly define that area as latitudes between <code>47.48172</code> and <code>47.734145</code>, and longitudes between <code>-122.224433</code> and <code>-122.459696</code>.</p>
-    </div>
   </div>
+  <div class="col-md-2"></div>
 </div>
