--- a/app/views/map.html
+++ b/app/views/map.html
@@ -3,7 +3,7 @@
     <div class="map-wrapper col-md-9 col-sm-12 col-xs-12">
       <div id="map-canvas"></div>
       <div class="noise-descrip">
-        <div class="noise-descrip-wrapper">
+        <div class="noise-descrip-wrapper text-center">
           <h4 ng-model="currentNoiseType">{{ currentNoiseType }}</h4>
           <p ng-model="currentNoiseInfo">{{ currentNoiseInfo }}</p>
         </div>
