--- a/app/views/contact.html
+++ b/app/views/contact.html
@@ -1,36 +1,30 @@
-<div class="contact">
-
-  <div class="row">
-
-    <div class="col-md-6">
-      <img class="img-circle" src="app/img/kristina.jpg"/>
-      <h3>Kristina Hjertberg</h3>
-      <div class="contact-link-container">
-        <a href="http://www.twitter.com/khjrtbrg" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
-        <a href="http://www.github.com/khjrtbrg" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
-        <a href="http://www.linkedin.com/in/khjrtbrg" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+<div class="row content-page">
+  <div class="col-md-2"></div>
+  <div class="col-md-8">
+    <div class="row">
+      <div class="col-md-6 text-center">
+        <img class="img-circle" src="app/img/kristina.jpg"/>
+        <h3>Kristina Hjertberg</h3>
+        <div class="contact-link-container">
+          <a href="http://www.twitter.com/khjrtbrg" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
+          <a href="http://www.github.com/khjrtbrg" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
+          <a href="http://www.linkedin.com/in/khjrtbrg" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        </div>
+      </div>
+      <div class="col-md-6 text-center">
+        <img class="img-circle" src="app/img/kat.jpg"/>
+        <h3>Kat Patke</h3>
+        <div class="contact-link-container">
+          <a href="http://www.twitter.com/kmmpatke" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
+          <a href="http://www.github.com/katke" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
+          <a href="http://www.linkedin.com/in/kpatke/en" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
+        </div>
       </div>
     </div>
-
-    <div class="col-md-6">
-      <img class="img-circle" src="app/img/kat.jpg"/>
-      <h3>Kat Patke</h3>
-      <div class="contact-link-container">
-        <a href="http://www.twitter.com/kmmpatke" target="_blank"><img src="app/img/twitter.png" class="contact-link"></a>
-        <a href="http://www.github.com/katke" target="_blank"><img src="app/img/github.png" class="contact-link"></a>
-        <a href="http://www.linkedin.com/in/kpatke/en" target="_blank"><img src="app/img/linkedin.png" class="contact-link"/></a>
-      </div>
-    </div>
-
-    <div class="col-md-12">
-
-      <h4>Incidentally...</h4>
-      <p>
-        Kat and Kristina will be looking for dev jobs circa late August 2015, when they finish their Ada internships at Nordstrom and Substantial, respectively. Just, you know, FYI.
-      </p>
-
-    </div>
-
+    <h4>Incidentally...</h4>
+    <p>
+      Kat and Kristina will be looking for dev jobs circa late August 2015, when they finish their Ada internships at Nordstrom and Substantial, respectively. Just, you know, FYI.
+    </p>
   </div>
-
+  <div class="col-md-2"></div>
 </div>
