--- a/app/css/home.css
+++ b/app/css/home.css
@@ -163,11 +163,11 @@ input[type="checkbox"] {
   border-radius: 4px;
   z-index: 1;
   animation-name: to_on;
-  animation-duration: 1s;
+  animation-duration: 0.7s;
   -webkit-animation-name: to_on;
-  -webkit-animation-duration: 1s;
+  -webkit-animation-duration: 0.7s;
   -moz-animation-name: to_on;
-  -moz-animation-duration: 1s;
+  -moz-animation-duration: 0.7s;
 }
 
 .switched-off {
@@ -233,7 +233,7 @@ label p {
 input[type=checkbox]:not(:checked) ~ div span {
   /*background-color: #F52F5D;*/
   animation-name: slide_off;
-  animation-duration: 1s;
+  animation-duration: 0.7s;
   /* Chrome, Safari, Opera */
   -webkit-animation-name: slide_off;
   -webkit-animation-duration: 0.7s;
@@ -331,6 +331,7 @@ input[type=checkbox]:not(:checked) ~ div span {
     background-color: #5DD9C1;
     z-index: 100;
     width: 100%;
+    height: 7.5vh;
   }
 
   .contact-link {
@@ -356,7 +357,7 @@ input[type=checkbox]:not(:checked) ~ div span {
     display: none;
     position: absolute;
     z-index: 100;
-    top: 250px;
+    top: 42.75vh;
   }
 
   .filters-open {
@@ -364,7 +365,7 @@ input[type=checkbox]:not(:checked) ~ div span {
   }
 
   .noise-descrip {
-    bottom: 40px;
+    bottom: 7.5vh;
     height: 75px;
     width: 100%;
     margin: 0;
@@ -389,7 +390,7 @@ input[type=checkbox]:not(:checked) ~ div span {
 }
 
 @media only screen and (max-width: 767px) {
-  .navbar.navbar-inverse.navbar-fixed-top { height: 100px; }
+  .navbar.navbar-inverse.navbar-fixed-top { height: 18vh; }
 
   .navbar-text.navbar-right { margin-top: 1em; }
 
@@ -398,7 +399,11 @@ input[type=checkbox]:not(:checked) ~ div span {
   body { padding-top: 100px; }
 
   #map-canvas {
-    height: 85.5vh;
+    height: 82.5vh;
+  }
+
+  .noise-descrip h4 {
+    margin-top: 10px;
   }
 
   .mobile-open {
